--- a/src/lwc/wired/mark/mark.css
+++ b/src/lwc/wired/mark/mark.css
@@ -10,6 +10,7 @@
 	width: 1rem;
 	height: 1rem;
 	cursor: pointer;
+	box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .box-container {
@@ -25,6 +26,10 @@
 
 .mark__title {
 	color: var(--flat-white);
+}
+
+.flatRedComplentary {
+	background-color: var(--flat-red);
 }
 
 .flatWhite {
